cmake_minimum_required(VERSION 3.23)
project(278_Lab3)

set(CMAKE_CXX_STANDARD 14)

add_executable(BST_STRINGS.c BST_STRINGS.c)
add_executable(BST_TRAVERSAL.c BST_TRAVERSAL.c )
add_executable(LAB3_MAIN.c LAB3_BST.c LAB3_MAIN.c LAB3_BST.h)
add_executable(LAB03_BST2.c LAB03_BST2.c )
add_executable(MAKEIDNT.c MAKEIDNT.c )